fix: change getFirst() to get(0) for compatibility